chore(deps): fix migration to hibernate 6